# miller-rabin

./: Cargo.toml  README.md  composite_128  gen_prime.sh  miller_rabin.py  prime_1024  prime_128  prime_2048  prime_4096  report.md
benches/: prime.rs
src/: big_int.rs  lib.rs  main.rs
