[package]
name = "miller-rabin"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2", features = ["rand"] }
rand = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "prime"
harness = false